--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         method="POST"onsubmit="beforesubmit()" >
         
         <input type=hidden name="oid" value="00D5j00000B77OxEAJ">
-        <input type=hidden name="retURL" value="https://anagarajasfdc.github.io/ANKIT-Sir-BootCamp/Thanks.html">
+        <input type=hidden name="retURL" value="https://anagarajasfdc.github.io/LWC-Ankit-Sir/Thanks.html">
         <input type=hidden name="lead_date" class="outputdate">
         
         <label for="first_name">First Name</label>  <input  id="first_name" maxlength="40" name="first_name" size="20" type="text" required="true"/><br>
